<resources>
    <string name="app_name">ExLink</string>
    <string name="action_settings">Settings</string>
    <string name="new_rule">Add application</string>

    <string name="test_url">http://www.example.org/ex-link-test</string>
    <string name="use_state">User Guide</string>
    <string name="show">Show</string>
    <string name="add_white_text1">Add the domain name you wish to be whitelisted:</string>
    <string name="built_in">[Built-in]</string>
    <string name="un_add">[To be added]</string>
    <string name="step_one_text1">Enter the name of the application you wish to block:</string>
    <string name="step_one_text2">Enter the package name of the application you wish to block：</string>
    <string name="step_one_text3">After click "OK", please reboot your device and relaunch this module</string>
    <string name="step_one_text4">Please reboot your device, and relaunch this module</string>
    <string name="step_three_text1">Added successfully! Please reboot your device.</string>
    <string name="step_three_text2">Please note: This feature is still a work in progress. Please remove the rule if the application fails to function properly after being blocked.</string>
    <string name="step_two_text1">Please click the link below and it will be placed into clipboard automatically.</string>
    <string name="step_two_text2">Then post this link (e.g. send a message, a status update) inside the application you wish to block and open it</string>
    <string name="step_one">Step One</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="demo">Demo</string>
    <string name="item_click_title">Actions</string>
    <string name="item_click_text1">Add Rules</string>
    <string name="item_click_text2">Add to Whitelist</string>
    <string name="item_click_text3">Delete</string>
    <string name="item_check_text">Rule saved. It will take effect after reboot</string>
    <string name="del_system_rule_toask">Unable to delete built-in rules</string>
    <string name="add_white_title">Add Whitelist</string>
    <string name="add_white_succeed">Added successfully</string>
    <string name="copy_succeed">Copied successfully</string>
    <string name="step_two">Step Two</string>
    <string name="step_three">Step Three</string>

    <item type="id" name="app_adapter_view_holder"/>
    <item type="id" name="app_adapter_position"/>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="hidden_icon">隐藏桌面图标</string>
    <string name="xposed_description">Block bulit-in browsers</string>
    <string name="change_succeed">修改成功</string>
    <string name="line">——分割线(你不知道下面是干什么的话，可以无视它)——</string>
    <string name="step_two_text3">自定义链接:假如你希望屏蔽的App做了链接跳转，或你没法主动发链接。那么请在下面的输入框内输入用于识别的链接。点击确定后再尝试（或许需要重启一下）。</string>
    <string name="step_two_text4">提示：如果你不知道哪个是应该输入的链接，请打开本App的“调试模式”，再次点击链接后，进入Xposed的日志，观察“[Exlink] - With extras: ”开头的日志。</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="reset_rule">取消[待确认]状态</string>
    <string name="import_json">导入规则</string>
    <string name="export_json">导出规则</string>
    <string name="import_old_json">导入旧版规则</string>


</resources>
