<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_two_text1"
            />
    <TextView
            android:id="@+id/step_two_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_url"
            android:textColor="#00F"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_two_text2"
            />

</LinearLayout>