<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/step_one_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="从手机里选择"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="点击后请稍等"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_one_text1"
            />
    <EditText
            android:id="@+id/new_rule_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_one_text2"
            />
    <EditText
            android:id="@+id/new_rule_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_one_text3"
            />

</LinearLayout>